fixes the invisible checkboxes

--- a/app/src/tabs/Risks/styles.css
+++ b/app/src/tabs/Risks/styles.css
@@ -156,10 +156,7 @@ label {
 
 .attackpathsections {
     display: flex;
-}
-
-input[name="risks__attack__path__checkboxes"]{
-    position: absolute;
+    align-items: flex-start;
 }
 
 /* .risk_attack_paths .and:nth-last-of-type() {
